# HayateProjects

./: .gitignore  AGENTS.md  CONTEXT-MAP.md  CONTEXT.md  CONTRIBUTING.md  README.md  handoff-restricted-inheritance.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json  tsconfig.base.json
Hayabusa/: .gitignore  Cargo.toml  README.md  build.rs
Hayabusa/codegen/: Cargo.toml
Hayabusa/codegen/src/: lib.rs
Hayabusa/components/: counter.hybs  text_field.hybs  todo.hybs
Hayabusa/docs/: pending-decisions.md
Hayabusa/docs/adr/: 0001-runtime-first-architecture-and-responsibility-line.md  0002-host-abi-flat-array-batch-and-codegen.md  0003-reactive-core-execution-value-model-ownership-scope.md  0004-declarative-template-ir-binding-and-component-model.md  0005-async-resource-suspense-errorboundary-scope-aggregation.md  0006-monorepo-crate-placement-and-hot-reload-as-reconcile.md  0007-input-value-binding-editstate-single-source-of-truth.md  0008-hybs-compiles-to-generated-rust-via-build-codegen.md  0009-cross-workspace-link-to-hayate-core-via-patch-replication.md  0010-static-style-dsl-and-set-style-op.md  0011-style-enum-vocab-generated-from-hayate-proto-spec.md
Hayabusa/src/: app_host.rs  component.rs  expr.rs  hayate_sink.rs  instantiate.rs  lib.rs  parse.rs  reactive.rs  sink.rs  style.rs  template.rs  value.rs
Hayabusa/style-vocab/: Cargo.toml  build.rs
Hayabusa/style-vocab/src/: lib.rs
Hayabusa/tests/: app_host.rs  component.rs  control_flow.rs  counter.rs  hayate_sink.rs  hybs_codegen.rs  input_binding.rs  parse_integration.rs  style.rs  todo.rs
Hayabusa/web-demo/: .gitignore  Cargo.toml  index-vello-cpu.html  index.html  shoot.mjs
Hayabusa/web-demo/src/: lib.rs
Hayate/: .gitignore  CONTEXT.md  Cargo.toml  README.md  package-lock.json  package.json
Hayate/.scratch/newdom-substrate/: PRD.md
Hayate/crates/app-host/: Cargo.toml
Hayate/crates/core/: Cargo.toml
Hayate/crates/demo-fixtures/: Cargo.toml
Hayate/crates/performance-matrix/: Cargo.toml
Hayate/crates/performance-observability/: Cargo.toml
Hayate/crates/platform/: README.md
Hayate/docs/: decisions-pending.md  hayate-spec.md  performance-matrix.md  spec.md
Hayate/docs/adr/: 0003-single-threaded-core.md  0004-taffy-for-layout.md  0005-linebender-text-stack.md  0007-vendored-dependencies.md  0008-layout-as-optional-module.md  0010-browser-computed-layout-extraction.md  0011-bundle-css-engine.md  0012-platform-equal-tier.md  0013-wit-dual-layer.md  0014-platform-adapter-scope.md  0015-wit-compilation-strategy.md  0016-web-ime-editcontext-only.md  0019-interaction-state-as-event.md  0021-z-index-as-child-ordering.md  0023-hayabusa-template-uses-hayate-element-vocabulary.md  0025-hayabusa-independent-repository.md  0026-hayabusa-file-extension-hybs.md  0027-hot-reload-template-style-immediate-script-per-language.md  0028-html-mode-text-uses-browser-rendering.md  0029-html-mode-browser-css-layout.md  0029-html-mode-zindex-as-absolute-layer.md  0033-raw-layer-wit-deferred.md  0034-poll-events-array-of-arrays.md  0038-tsubame-as-signal-runtime-with-adapters.md  0039-apply-mutations-encoding.md  0040-tsubame-as-renderer-target-not-signal-runtime.md  0042-cjk-font-fallback-notdef-detection.md  0043-adapter-owns-font-url-dispatch.md  0045-hayabusa-rust-framework-multilang-embedding.md  0046-scroll-physics-owned-by-platform-adapter.md  0047-restricted-style-inheritance.md  0048-tiny-skia-cpu-fallback.md  0049-protocol-yaml-single-source.md  0050-scene-renderer-selection-architecture.md  0051-tsubame-first-development-priority.md  0052-apply-mutations-unified-string-table.md  0053-element-document-runtime-poll-deliveries.md  0054-scene-painter-shared-walk.md  0055-wire-codec-single-source.md  0056-interaction-pseudo-styles-in-render-layer.md  (+114 more)
Hayate/docs/archive/: TODO.md  decisions-pending.md  hayate-spec-v1.1.md  hayate-spec-v1.2.md
Hayate/docs/investigations/: 2026-07-12-android-skia-gl-verification.md  2026-07-12-vello-wgpu-adreno-breakage.md  2026-07-14-android-skia-safe-real-device-default.md
Hayate/examples/web-demo/: demo-01.html  demo-02.html  demo-05.html  demo-sandbox.html  demo-tsubame-03.html  element-batch.js  hayate.config.json  index.html  serve.json
Hayate/host/: README.md  package.json  tsup.config.ts
Hayate/host/src/: accessibility-mirror.test.ts  accessibility-mirror.ts  canvaskit-bridge.test.ts  canvaskit-bridge.ts  hayate-adapter-web-cpu.d.ts  index.ts  load-canvas-backend.generated.ts  load-canvas-backend.test.ts  native-host.test.ts  native.ts  protocol-version.test.ts  raw-hayate.ts  renderer-policy.ts  resolve-backend.test.ts  resolve-backend.ts  web-host.test.ts  worker-boot.test.ts  worker-boot.ts  worker-host.test.ts  worker-host.ts
Hayate/proto/: README.md  package.json  protocol.yaml
Hayate/proto/generator/: Cargo.toml
Hayate/proto/scripts/: load-spec.mjs  validate-spec.mjs
Hayate/proto/spec/: draw_ops.json  draw_paint_fields.json  edit_intents.json  element_kinds.json  element_properties.json  enums.json  event_kinds.json  manifest.json  modifier_keys.json  opcodes.json  pseudo_states.json  style_tags.json  types.json  unset_kinds.json
Hayate/scripts/: build-android-performance-benchmark.sh  build-android.sh  build-wasm-layer-present.mjs  build-wasm.mjs  build-wasm.sh  check-font-urls.lib.mjs  check-font-urls.mjs  check-font-urls.test.mjs  clean-wasm-pkgs.mjs  codegen-canvas-backend.lib.mjs  codegen-canvas-backend.mjs  codegen-canvas-backend.test.mjs  collect-android-performance-report.sh  collect-performance-matrix-case.py  gen-from-wit.mjs  run-desktop.mjs  torimi-android-play-release.sh  verify-android-stage-a.sh  verify-canvaskit-web-asset.mjs  wasm-build-manifest.json  wasm-manifest.mjs  wasm-manifest.test.mjs
Hayate/wasm-pkgs/pkg-canvaskit/: README.md  package.json
Hayate/wasm-pkgs/pkg-layer-present/: package.json
Hayate/wasm-pkgs/pkg-null/: README.md  package.json
Hayate/wasm-pkgs/pkg-tiny-skia/: README.md  package.json
Hayate/wasm-pkgs/pkg-vello-cpu/: README.md  package.json
Hayate/wit/: hayate.wit
(+1027 files in other folders)
