[workspace]
members = [
    "crates/core",
    "crates/scene-renderers/vello",
    "crates/scene-renderers/tiny-skia",
    "crates/adapters/web",
    "proto/generator",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Hayate — GPU-native UI substrate"
repository = "https://github.com/KenichiroMatsubara/HayateProjects"

[workspace.dependencies]
# GPU / rendering
wgpu = { version = "29", features = ["wgsl"] }
vello = "0.9"
tiny-skia = { version = "0.11", default-features = false, features = ["std"] }

# Layout
taffy = "0.7"

# Text stack
parley = "0.9"
fontique = { path = "crates/vendor/fontique", features = ["fontconfig-dlopen"] }
skrifa = "0.42"

# WASM
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "HtmlCanvasElement",
    "Window",
    "Navigator",
    "Gpu",
    "GpuAdapter",
    "GpuDevice",
] }

# Utilities
slotmap = "1"
anyhow = "1"
log = "0.4"
accesskit = { version = "0.24.0", features = ["serde"] }

[patch.crates-io]
# Vendored crates — upstream は切断し workspace path 依存に切り替え (ADR-0007)
vello           = { path = "crates/vendor/vello" }
vello_encoding  = { path = "crates/vendor/vello_encoding" }
vello_shaders   = { path = "crates/vendor/vello_shaders" }
taffy           = { path = "crates/vendor/taffy" }
parley          = { path = "crates/vendor/parley" }
parley_data     = { path = "crates/vendor/parley_data" }
fontique        = { path = "crates/vendor/fontique" }
skrifa          = { path = "crates/vendor/skrifa" }
