[workspace]
members = [
    "crates/core",
    "crates/app-host",
    "crates/demo-fixtures",
    "crates/scene-renderers/vello",
    "crates/scene-renderers/tiny-skia",
    "crates/scene-renderers/skia",
    "crates/scene-renderers/test-support",
    "crates/scene-renderers/compositor",
    "crates/platform/web",
    "crates/platform/desktop",
    "crates/platform/mobile",
    "crates/platform/mobile/android",
    "crates/platform/mobile/ios",
    "proto/generator",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Hayate — GPU-native UI substrate"
repository = "https://github.com/KenichiroMatsubara/HayateProjects"

[workspace.dependencies]
# GPU / rendering
wgpu = { version = "29", features = ["wgsl"] }
vello = "0.9"

# Desktop windowing (ADR-0118) — winit が desktop family の windowing 層を畳む。
winit = "0.30"
# skia raster フレームの wgpu 非依存 CPU present（issue #801・ADR-0146 §3）。
softbuffer = "0.4"
tiny-skia = { version = "0.11", default-features = false, features = ["std"] }

# Layout
taffy = "0.12"

# Text stack
parley = "0.9"
fontique = { path = "crates/vendor/fontique", features = ["fontconfig-dlopen"] }
skrifa = "0.42"

# WASM
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "HtmlCanvasElement",
    "Window",
    "Navigator",
    "Gpu",
    "GpuAdapter",
    "GpuDevice",
] }

# Utilities
slotmap = "1"
anyhow = "1"
log = "0.4"
# desktop demo バイナリのログ出力（RUST_LOG を実際に効かせる・#777）
env_logger = "0.11"
pollster = "0.4"
accesskit = { version = "0.24.0", features = ["serde"] }

[patch.crates-io]
# Vendored crates — upstream は切断し workspace path 依存に切り替え (ADR-0007)
vello           = { path = "crates/vendor/vello" }
vello_encoding  = { path = "crates/vendor/vello_encoding" }
vello_shaders   = { path = "crates/vendor/vello_shaders" }
taffy           = { path = "crates/vendor/taffy" }
parley          = { path = "crates/vendor/parley" }
parley_data     = { path = "crates/vendor/parley_data" }
fontique        = { path = "crates/vendor/fontique" }
skrifa          = { path = "crates/vendor/skrifa" }
