[workspace]
members = [
    "crates/performance-matrix",
    "crates/performance-observability",
    "crates/core",
    "crates/app-host",
    "crates/demo-fixtures",
    "crates/scene-renderers/vello",
    "crates/scene-renderers/tiny-skia",
    "crates/scene-renderers/skia",
    "crates/scene-renderers/test-support",
    "crates/scene-renderers/compositor",
    "crates/platform/web",
    "crates/platform/desktop",
    "crates/platform/mobile",
    "crates/platform/mobile/android",
    "crates/platform/mobile/ios",
    "proto/generator",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Hayate — GPU-native UI substrate"
repository = "https://github.com/KenichiroMatsubara/HayateProjects"

[workspace.dependencies]
# GPU / rendering
wgpu = { version = "29.0.3", features = ["wgsl"] }
vello = "0.9.0"

# Desktop windowing (ADR-0118) — winit が desktop family の windowing 層を畳む。
winit = "0.30.13"
# skia raster フレームの wgpu 非依存 CPU present（issue #801・ADR-0146 §3）。
softbuffer = "0.4.8"
tiny-skia = { version = "0.12.0", default-features = false, features = ["std"] }

# Layout
taffy = "0.12.2"

# Text stack
parley = { version = "0.11.0", features = ["complex-scripts"] }
fontique = { path = "crates/vendor/fontique", features = ["fontconfig-dlopen"] }
skrifa = "0.45.0"

# WASM
wasm-bindgen = "0.2.126"
wasm-bindgen-futures = "0.4.76"
js-sys = "0.3.103"
web-sys = { version = "0.3.103", features = [
    "HtmlCanvasElement",
    "Window",
    "Navigator",
    "Gpu",
    "GpuAdapter",
    "GpuDevice",
] }

# Utilities
slotmap = "1.1.1"
imbl = "7.0.1"
anyhow = "1.0.104"
log = "0.4.33"
# desktop demo バイナリのログ出力（RUST_LOG を実際に効かせる・#777）
env_logger = "0.11.11"
pollster = "1.0.1"
bytemuck = { version = "1.25.2", features = ["derive"] }
accesskit = { version = "0.24.1", features = ["serde"] }

[patch.crates-io]
# Vendored crates — upstream は切断し workspace path 依存に切り替え (ADR-0007)
vello           = { path = "crates/vendor/vello" }
vello_encoding  = { path = "crates/vendor/vello_encoding" }
vello_shaders   = { path = "crates/vendor/vello_shaders" }
taffy           = { path = "crates/vendor/taffy" }
parley          = { path = "crates/vendor/parley" }
parley_data     = { path = "crates/vendor/parley_data" }
fontique        = { path = "crates/vendor/fontique" }
skrifa          = { path = "crates/vendor/skrifa" }
