[package]
name = "hayabusa-codegen"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Hayabusa .hybs → generated Rust compiler (build-time codegen, ADR-0008)"
repository = "https://github.com/KenichiroMatsubara/HayateProjects"

# Pure-std, no dependencies: this crate is a `[build-dependencies]` of the hayabusa
# crate (a crate cannot use its own library from build.rs, ADR-0008). It parses
# `.hybs` and emits Rust source; the generated code depends on the hayabusa public
# API, not on this crate.
[dependencies]
