[package]
name = "hayabusa-web-demo"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Hayabusa → hayate-adapter-web present 統合のデモ（ADR-0045 in-process projection）"
repository = "https://github.com/KenichiroMatsubara/HayateProjects"

# 合成ルート（App）: Hayabusa（reactive runtime → ElementTree を組む）と
# hayate-adapter-web（その ElementTree を Web canvas へ present する）を 1 つの wasm へ束ねる。
# Hayabusa は wire を介さず in-process Rust projection（ADR-0045）で同一 `hayate_core::ElementTree`
# を直接駆動し、adapter-web の `HayateElementRenderer::render()` がそれをレイアウト → tiny-skia
# CPU バックエンドで描画する（WebGPU 不要 = headless 安定）。
[lib]
crate-type = ["cdylib"]

[dependencies]
# Hayabusa 本体（実 core 駆動 + App Host mount）。
hayabusa = { path = "..", features = ["hayate-core", "app-host"] }
# App Host の `DeliverySink` トレイト（`handle` を呼ぶため）。
hayate-app-host = { path = "../../Hayate/crates/app-host" }
# click を合成して reactive 経路を駆動するための `Event` / `DocumentEventKind` / `ElementId`。
hayate-core = { path = "../../Hayate/crates/core" }
# Web present アダプタ。CPU バックエンド（tiny-skia）だけを引き、wgpu/vello を排除する。
hayate-adapter-web = { path = "../../Hayate/crates/platform/web", default-features = false, features = [
    "backend-tiny-skia",
] }

wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = ["HtmlCanvasElement", "Window", "Document"] }

# Hayate のワークスペースは vendored crate を `[patch.crates-io]` で差し替える（Hayate ADR-0007）。
# patch はワークスペースをまたいで継承されないため（Hayabusa ADR-0009 の spike）、ここでも
# 同じテーブルを複製し、同一の vendored crate を指す。これで hayate-core / hayate-adapter-web の
# パス依存リンクが解決する。
[patch.crates-io]
vello          = { path = "../../Hayate/crates/vendor/vello" }
vello_encoding = { path = "../../Hayate/crates/vendor/vello_encoding" }
vello_shaders  = { path = "../../Hayate/crates/vendor/vello_shaders" }
taffy          = { path = "../../Hayate/crates/vendor/taffy" }
parley         = { path = "../../Hayate/crates/vendor/parley" }
parley_data    = { path = "../../Hayate/crates/vendor/parley_data" }
fontique       = { path = "../../Hayate/crates/vendor/fontique" }
skrifa         = { path = "../../Hayate/crates/vendor/skrifa" }
