[package]
name = "hayate-app-host"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Hayate App Host — platform-independent mount point and frame loop (ADR-0117)"
repository.workspace = true

[features]
backend-vello = []
backend-tiny-skia = []
backend-vello-cpu = []
# ADR-0148: Skia CanvasKit web backend（DRAFT / Phase 2）。空フラグ — 選択ポリシーの
# cfg ゲートにだけ効く（wasm-adapter 側が dep を持つ）。
backend-canvaskit = []
backend-recording = []
backend-null = []

[dependencies]
hayate-core = { path = "../core" }
hayate-layer-compositor = { path = "../scene-renderers/compositor" }
anyhow.workspace = true
log.workspace = true

[dev-dependencies]
pollster.workspace = true
