[package]
name = "hayate-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
taffy.workspace = true
parley.workspace = true
fontique.workspace = true
slotmap.workspace = true
anyhow.workspace = true
log.workspace = true
linebender_resource_handle = "0.1.1"
accesskit.workspace = true

[dev-dependencies]
serde_json = "1"
