[package]
name = "hayate-performance-matrix"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Deterministic Android and host performance acceptance matrix for Hayate"
repository.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
