[package]
name = "hayate-proto-generator"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Generate Hayate protocol Rust artifacts from proto/spec/*.json"
publish = false

[[bin]]
name = "hayate-proto-generator"
path = "src/main.rs"

[lib]
name = "hayate_proto_generator"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"
