[package]
name = "hayate-adapter-android"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Android Platform Adapter for Hayate (ADR-0087 / ADR-0094, GameActivity + Gradle)"
repository.workspace = true

[lib]
# cdylib is loaded by GameActivity via `android.app.lib_name`; rlib lets the
# host-testable seams (surface_lifecycle / touch_input / scene_demo) run under
# `cargo test` on the dev machine.
crate-type = ["cdylib", "rlib"]

[dependencies]
hayate-core = { path = "../../core" }
hayate-scene-renderer-vello = { path = "../../scene-renderers/vello" }
wgpu = { workspace = true }
log.workspace = true
pollster.workspace = true

[target.'cfg(target_os = "android")'.dependencies]
# GameActivity backend (ADR-0094): GameTextInput surfaces the soft-keyboard
# InputConnection to native code for the stage C IME bridge. Packaging is the
# Gradle project under `android-app/`, not cargo-apk.
android-activity = { version = "0.6", features = ["game-activity"] }
android_logger = "0.14"
ndk = "0.9"
