[package]
name = "hayate-adapter-web"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["backend-vello", "backend-tiny-skia"]
backend-vello = ["dep:wgpu", "dep:vello"]
backend-tiny-skia = ["dep:tiny-skia", "dep:skrifa"]
backend-recording = []
backend-null = []

[dependencies]
hayate-core = { path = "../../core" }
wgpu = { workspace = true, optional = true }
vello = { workspace = true, optional = true }
tiny-skia = { workspace = true, optional = true }
skrifa = { workspace = true, optional = true }
slotmap.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
js-sys.workspace = true
web-sys = { workspace = true, features = [
    "HtmlCanvasElement",
    "HtmlImageElement",
    "HtmlInputElement",
    "Window",
    "Navigator",
    "Gpu",
    "Document",
    "DomRect",
    "DomStringMap",
    "HtmlHeadElement",
    "HtmlElement",
    "Element",
    "Node",
    "CssStyleDeclaration",
    "Request",
    "RequestInit",
    "Response",
    "CanvasRenderingContext2d",
    "ImageData",
] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
anyhow.workspace = true
log.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
console_log = "1"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[build-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
