[package]
name = "hayate-adapter-web"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["backend-vello", "backend-tiny-skia"]
backend-vello = ["dep:wgpu", "dep:hayate-scene-renderer-vello", "hayate-app-host/backend-vello"]
backend-tiny-skia = ["dep:tiny-skia", "dep:hayate-scene-renderer-tiny-skia", "hayate-app-host/backend-tiny-skia"]
backend-recording = ["hayate-app-host/backend-recording"]
backend-null = ["hayate-app-host/backend-null"]

[dependencies]
hayate-core = { path = "../../core" }
hayate-app-host = { path = "../../app-host" }
hayate-layer-compositor = { path = "../../scene-renderers/compositor" }
hayate-scene-renderer-vello = { path = "../../scene-renderers/vello", optional = true }
hayate-scene-renderer-tiny-skia = { path = "../../scene-renderers/tiny-skia", optional = true }
wgpu = { workspace = true, optional = true }
tiny-skia = { workspace = true, optional = true }
slotmap.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
js-sys.workspace = true
web-sys = { workspace = true, features = [
    "HtmlCanvasElement",
    "HtmlImageElement",
    "HtmlInputElement",
    "HtmlTextAreaElement",
    "HtmlStyleElement",
    "Window",
    "Navigator",
    "Gpu",
    "Document",
    "DomRect",
    "DomStringMap",
    "HtmlHeadElement",
    "HtmlElement",
    "Element",
    "Node",
    "NodeList",
    "CssStyleDeclaration",
    "CssStyleSheet",
    "CssStyleRule",
    "CssRuleList",
    "CssRule",
    "StyleSheet",
    "Request",
    "RequestInit",
    "Response",
    "CanvasRenderingContext2d",
    "ImageData",
    "ResizeObserver",
    "ResizeObserverEntry",
    "Event",
    "EventTarget",
    "MouseEvent",
    "PointerEvent",
    "WheelEvent",
    "KeyboardEvent",
    "AddEventListenerOptions",
    "Clipboard",
    "Blob",
    "ImageBitmap",
] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
anyhow.workspace = true
log.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
console_log = "1"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[build-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
serde_json = "1"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

