[package]
name = "hayate-scene-renderer-tiny-skia"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "tiny-skia Scene Renderer for Hayate"

[dependencies]
hayate-core = { path = "../../core" }
tiny-skia = { workspace = true }
skrifa = { workspace = true }

[dev-dependencies]
hayate-scene-test-support = { path = "../test-support" }
