[package]
name = "hayate-adapter-android"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Android Platform Adapter for Hayate (ADR-0087 / ADR-0094, GameActivity + Gradle)"
repository.workspace = true

[lib]
# cdylib is loaded by GameActivity via `android.app.lib_name`; rlib lets the
# host-testable seams (surface_lifecycle / touch_input / scene_demo) run under
# `cargo test` on the dev machine.
crate-type = ["cdylib", "rlib"]

[features]
# Tsubame Todo デモが本命なので既定 ON（ADR-0112）。埋め込み Hermes が呼ぶ
# apply_mutations を、共有の中立 dispatch 経由で ElementTree に適用する。
# Hayate 単体のネイティブデモ（build_demo_tree）を見たいときだけ
# `--no-default-features`（Gradle では `-Pnativedemo`）で外す。
default = ["tsubame-js"]
tsubame-js = []

[dependencies]
hayate-core = { path = "../../../core" }
hayate-scene-renderer-vello = { path = "../../../scene-renderers/vello" }
wgpu = { workspace = true }
log.workspace = true
pollster.workspace = true

[target.'cfg(target_os = "android")'.dependencies]
# GameActivity backend (ADR-0094): GameTextInput surfaces the soft-keyboard
# InputConnection to native code for the stage C IME bridge. Packaging is the
# Gradle project under `android-app/`, not cargo-apk.
android-activity = { version = "0.6", features = ["game-activity"] }
android_logger = "0.14"
ndk = "0.9"
# QR スキャナ leaf（ADR-0125）の Rust↔Kotlin JNI seam。Code Scanner は Play services の
# Kotlin/Java API しか無いため、本 leaf だけ JNI で Kotlin（QrScannerBridge）を呼ぶ。
# JavaVM / Activity(Context) は android-activity が設定する ndk-context から受け取る。
jni = "0.21"
ndk-context = "0.1"
# Tsubame JS 駆動経路（ADR-0112）の C++/JSI ブリッジ。Hermes は JSI(C++)なので
# cxx で flat-C ABI を張る。device ビルド（Gradle + NDK + libhermes）専用で、
# ホスト `cargo check` には載らない（build.rs が target_os=android のときだけ
# C++ をコンパイルする）。
cxx = "1"

[build-dependencies]
# cxx ブリッジの C++ 側コンパイル（ADR-0112）。Android ターゲットかつ
# `tsubame-js` feature 有効時のみ呼ぶ（build.rs 参照）。
cxx-build = "1"
